--- a/docs/my-slider.css
+++ b/docs/my-slider.css
@@ -372,12 +372,12 @@ p.ism-badge a.ism-link:hover {
 }
 
 #my-slider .ism-slide-1 .ism-img-frame {
-    width: 100%;
+    height: 100%;
 }
 
 #my-slider .ism-slide-1 .ism-img {
-    width: 100%;
-    top: 50%; -webkit-transform: translateY(-50%); -moz-transform: translateY(-50%); -ms-transform: translateY(-50%); transform: translateY(-50%);
+    height: 100%;
+    left: 50%; -webkit-transform: translateX(-50%); -moz-transform: translateX(-50%); -ms-transform: translateX(-50%); transform: translateX(-50%);
 }
 
 #my-slider .ism-slide-2 .ism-img-frame {
